# legacy-msg-data

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bijection.rs  roundtrip_cbor.rs  roundtrip_compact.rs  roundtrip_signing.rs
src/: legacy_f64.rs  lib.rs  value.rs
src/abstract_/: deserialize.rs  deserializer.rs  mod.rs  serialize.rs  serializer.rs
src/cbor/: de.rs  mod.rs  ser.rs
src/data/: legacy_f64.rs  mod.rs  value.rs
src/data/cbor/: de.rs  mod.rs
src/data/de/: deserialize.rs  deserializer.rs  mod.rs
src/data/json/: de.rs  mod.rs
src/data/ser/: mod.rs  serialize.rs
src/de/: deserialize.rs  deserializer.rs
src/json/: de.rs  mod.rs  ser.rs  value.rs
src/metadata/: mod.rs
src/ser/: serializer.rs
