[package]
name = "ssb-legacy-msg-data"
version = "0.1.3"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
license = "LGPL-3.0"
description = "Rust implementation of the [ssb legacy data format](https://spec.scuttlebutt.nz/feed/datamodel.html)."
repository = "https://github.com/sunrise-choir/legacy-msg-data"

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
base64 = "0.13"
indexmap = "1.6.2"
ryu-ecmascript = "0.1.1"
strtod2 = "0.0.1"
encode_unicode = "0.3.5"
